--- a/MusicPlayer/MusicPlayer/MusicPlayer.csproj
+++ b/MusicPlayer/MusicPlayer/MusicPlayer.csproj
@@ -55,7 +55,8 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bass.Net">
+    <Reference Include="Bass.Net, Version=2.4.10.3, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bass.Net.dll</HintPath>
     </Reference>
     <Reference Include="Hardcodet.Wpf.TaskbarNotification">
@@ -83,6 +84,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="domain\bass\Eq.cs" />
     <Compile Include="domain\PlayList.cs" />
     <Compile Include="domain\local\LocalAudio.cs" />
     <Compile Include="domain\TypeMusic.cs" />
@@ -91,6 +93,10 @@
     <Compile Include="domain\vk\VKGroup.cs" />
     <Compile Include="domain\vk\VKHelper.cs" />
     <Compile Include="domain\vk\VKUser.cs" />
+    <Page Include="EQ.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LoginVK.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -106,6 +112,9 @@
     <Compile Include="domain\Audio.cs" />
     <Compile Include="domain\last.fm\LastFmHelper.cs" />
     <Compile Include="domain\last.fm\LastFmTrack.cs" />
+    <Compile Include="EQ.xaml.cs">
+      <DependentUpon>EQ.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LoginVK.xaml.cs">
       <DependentUpon>LoginVK.xaml</DependentUpon>
     </Compile>
@@ -113,6 +122,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewPlaylist.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Properties\DesignTimeResources.xaml" Condition="'$(DesignTime)'=='true' OR ('$(SolutionPath)'!='' AND Exists('$(SolutionPath)') AND '$(BuildingInsideVisualStudio)'!='true' AND '$(BuildingInsideExpressionBlend)'!='true')">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -124,6 +137,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewPlaylist.xaml.cs">
+      <DependentUpon>NewPlaylist.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
